syntax = "proto3";

package protobuf;

import "google/api/annotations.proto";

message HelloRequest {
    string firstname = 1;
    string lastname = 2;
}

message HelloResponse {
    string message = 1;
}

service HWService {
    rpc SayHello(HelloRequest) returns (HelloResponse) {
        option (google.api.http) = {
            post: "/v1/sayhello"
            body: "*"
        };
    }
}